--- a/css/style.css
+++ b/css/style.css
@@ -4,4 +4,53 @@
   bottom: 122%;
   z-index: 4; }
 
+.media-object {
+  width: 120px; }
+
+.media-heading {
+  text-transform: uppercase;
+  font-size: 16px;
+  font-weight: bold; }
+  .media-heading > span {
+    color: #00AF9D; }
+  .media-heading + p {
+    margin-top: 2em; }
+
+.title-bar {
+  padding: 1em;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  text-transform: uppercase;
+  margin-bottom: 1em; }
+  .title-bar.primary {
+    background: #09BDD5; }
+  .title-bar.secondary {
+    background: #00AF9D; }
+
+.search-bg {
+  background: #DAF3FF;
+  color: #00AF9D;
+  padding: 4em 0; }
+  .search-bg > input {
+    height: 64px;
+    width: 65%;
+    border: 1px solid #09BDD5;
+    padding-left: 1em;
+    font-style: italic; }
+  .search-bg button {
+    font-weight: bold;
+    height: 64px;
+    color: white;
+    background: #00AF9D;
+    border: none;
+    padding: 0 4em;
+    font-size: 16px; }
+
+.sidebar {
+  background: #DDD;
+  padding: 1em; }
+  .sidebar h4 {
+    margin-top: 0; }
+
 /*# sourceMappingURL=style.css.map */
